update language to english
