# storage/api-docs/api-docs.json
@@ -233,6 +233,38 @@
                                             "type": "string"
                                         },
                                         "user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "type": "string"
+                                                },
+                                                "image": {
+                                                    "type": "string",
+                                                    "nullable": true
+                                                },
+                                                "role": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer"
+                                                        },
+                                                        "name": {
+                                                            "type": "string"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "permissions": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            },
                                             "type": "object"
                                         }
                                     },
@@ -278,7 +310,46 @@
                 "operationId": "8367feff40ba10e43187792cad3132c1",
                 "responses": {
                     "200": {
-                        "description": "Successful operation"
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "name": {
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "type": "string"
+                                        },
+                                        "image": {
+                                            "type": "string",
+                                            "nullable": true
+                                        },
+                                        "role": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "permissions": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -871,13 +942,13 @@
                 ]
             }
         },
-        "/api/student/reclamations": {
+        "/api/student/complaints": {
             "post": {
                 "tags": [
                     "Student"
                 ],
-                "summary": "Submit a reclamation",
-                "operationId": "6a14ba88030f8e5929232fe40e78d4fe",
+                "summary": "Submit a complaint",
+                "operationId": "b8335875c1be6c758d397eed81f033ca",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -899,7 +970,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Reclamation submitted"
+                        "description": "Complaint submitted"
                     },
                     "401": {
                         "description": "Unauthenticated"
